[tool.poetry]
name = "harvrest"
version = "0.1.0"
description = ""
authors = ["Norbert Parti <norbert.parti.work@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
result = "^0.13.1"
httpx = "^0.25.0"
loguru = "^0.7.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
